--- a/pyproject.toml
+++ b/pyproject.toml
@@ -192,6 +192,15 @@ skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package
 # Ignore latin etc
 ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
 
+[tool.codeflash]
+# All paths are relative to this pyproject.toml's directory.
+module-root = 'src/backend/base/langflow'
+tests-root = "src/backend/tests"
+test-framework = "pytest"
+ignore-paths = []
+formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
+#disable plugins that might interfere with runtime measurement
+pytest-cmd = "pytest -p no:profiling -p no:sugar -p no:xdist -p no:cov -p no:split"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
